﻿2005-07-23  Michael Fink  <vividos@users.sourceforge...>

	* test/unit/locale_test.cpp: Added creating locale pointer in
	test_supported_locale() when no exception handling is available.

	* src/stlport.rc: Added version info defines when not available through
	windows.h. Happens on evc3 MIPS and evc3 SH3.

2005-07-23  Francois Dumont  <dums@stlport...>

	* stlport/stl/_string_sum.h: Fix missing return statement in a compare
	method.

2005-07-22  Francois Dumont  <dums@stlport...>

	* stlport/stl/_algo.c: Fix search_n implementation for random access
	iterator thanks Jim Xochellis

	* test/unit/algo_test.cpp: Add test case for the previous bug thanks
	Michael Fink.

	* src/num_get_float.cpp: Fix gcc Mingwin and Cygwin special version with
	building with -O2 option.

	* build/Makefiles/gmake/gcc.mak: Add -D_REENTRANT definition for cygwin and
	-mthreads for mingwin platform to make STLport thread safe like under the
	other supported platforms.


2005-06-30  Petr Ovtchenkov  <ptr@island...>

	* stlport/wchar.h, src/c_locale.c, stlport/stl/_threads.h: fix Netware
	wcs... functions.

2005-06-30  Francois Dumont  <dums@stlport...>

	* stlport/stl/_rope.h, _rope.c: Duplicate basic_string::npos definition code
	in rope implementation to use a "Standard" static const npos definition when
	possible depending on the compiler features. Thanks caldwed report.

2005-06-30  Michael Fink  <vividos@users.sourceforge...>

	* stlport/cstdlib, stdlib.h: Fixed issue with including stdlib.h after
	setjmp.h; fix from 2005-06-23 wasn't solving the problem.

2005-06-28  Francois Dumont  <dums@stlport...>

	* stlport/stl/_hash_func.h: For MSVC .Net compiler we grant the hash<size_t>
	specialization rather than the hash<unsigned int> one to avoid 64 bits
	warnings when instanciating a hashed container with the size_t key.

	* stlport/stl/_istream_iterator.h: Modify istream_iterator implementation
	to avoid the default read from the istream even if the istream_iterator