@@ -2027,8 +2027,8 @@ public:
 # endif
 }; //class rope
 
-#if !defined (_STLP_STATIC_CONST_INIT_BUG) && \
-              __GNUC__ == 2 && __GNUC_MINOR__ == 96
+#if !defined (_STLP_STATIC_CONST_INIT_BUG) &&  \
+   (!defined (__GNUC__) || ((__GNUC__ == 2) && (__GNUC_MINOR__ == 96)))
 template <class _CharT, class _Alloc>
 const size_t rope<_CharT, _Alloc>::npos = ~(size_t) 0;
 #endif
